doc/nl: update some in-between pieces of the Handbook
Translated using Weblate.

--- a/documentation/content/nl/books/handbook/book.adoc
+++ b/documentation/content/nl/books/handbook/book.adoc
@@ -1,12 +1,16 @@
 ---
-title: FreeBSD handboek
+add_split_page_link: 'true'
 authors:
-  - author: The FreeBSD Dutch Documentation Project
-copyright: 1995-2020 The FreeBSD Dutch Documentation Project
-trademarks: ["freebsd", "ibm", "ieee", "redhat", "3com", "adobe", "apple", "intel", "linux", "microsoft", "opengroup", "sun", "realnetworks", "oracle", "3ware", "arm", "adaptec", "heidelberger", "intuit", "lsilogic", "themathworks", "thomson", "vmware", "wolframresearch", "xiph", "xfree86", "general"] 
+  - 
+    author: 'The FreeBSD Documentation Project'
+copyright: '1995-2025 The FreeBSD Documentation Project'
+description: 'Een uitgebreide, zich voortdurend ontwikkelende bron voor FreeBSD-gebruikers'
+tags: ["FreeBSD Handbook", "Handbook"]
+title: 'FreeBSD Handboek'
+trademarks: ["freebsd", "ibm", "ieee", "redhat", "3com", "adobe", "apple", "intel", "linux", "microsoft", "opengroup", "sun", "realnetworks", "oracle", "3ware", "arm", "adaptec", "google", "heidelberger", "intuit", "lsilogic", "themathworks", "thomson", "vmware", "wolframresearch", "xiph", "xfree86", "general"]
 ---
 
-= FreeBSD handboek
+= FreeBSD Handboek
 :doctype: book
 :toc: macro
 :toclevels: 2
@@ -42,11 +46,7 @@ ifndef::env-beastie[]
 include::../../../../../shared/asciidoctor.adoc[]
 endif::[]
 
-[.abstract-title]
-[abstract]
-Samenvatting
-
-Welkom bij FreeBSD! Dit handboek behandelt de installatie en het dagelijks gebruik van _FreeBSD {rel112-current}-RELEASE_ en _FreeBSD {rel120-current}-RELEASE_. Aan deze handleiding wordt nog gewerkt, en is het resultaat van het werk van veel mensen. Veel hoofdstukken of paragrafen bestaan nog niet en wat bestaat dient soms nog bijgewerkt te worden. Als de lezer mee wil helpen aan dit project kan een mail gestuurd worden naar de {freebsd-doc}. De meest recente versie van dit document is te vinden op de http://www.FreeBSD.org/[FreeBSD website]. Eerdere versies van dit handboek zijn te vinden op http://docs.FreeBSD.org/doc/[http://docs.FreeBSD.org/doc/]. Het kan ook gedownload worden in veel verschillende formaten en compressiewijzen van de link:ftp://ftp.FreeBSD.org/pub/FreeBSD/doc/[FreeBSD FTP server] of een van de vele <<mirrors-ftp,mirrorsites>>. Een gedrukt exemplaar van het handboek is te koop bij de http://www.freebsdmall.com/[FreeBSD Mall] (Engels). Het handboek kan ook link:https://www.FreeBSD.org/search/[ doorzocht worden].
+include::{chapters-path}introduction.adoc[]
 
 '''
 
@@ -63,8 +63,6 @@ include::{chapters-path}parti.adoc[]
 
 include::{chapters-path}introduction/_index.adoc[leveloffset=+1]
 
-include::{chapters-path}install/_index.adoc[leveloffset=+1]
-
 include::{chapters-path}bsdinstall/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}basics/_index.adoc[leveloffset=+1]
@@ -72,6 +70,10 @@ include::{chapters-path}basics/_index.adoc[leveloffset=+1]
 include::{chapters-path}ports/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}x11/_index.adoc[leveloffset=+1]
+
+include::{chapters-path}wayland/_index.adoc[leveloffset=+1]
+
+include::{chapters-path}network/_index.adoc[leveloffset=+1]
 
 // Section two
 include::{chapters-path}partii.adoc[]
@@ -86,14 +88,14 @@ include::{chapters-path}printing/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}linuxemu/_index.adoc[leveloffset=+1]
 
+include::{chapters-path}wine/_index.adoc[leveloffset=+1]
+
 // Section three
 include::{chapters-path}partiii.adoc[]
 
 include::{chapters-path}config/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}boot/_index.adoc[leveloffset=+1]
-
-include::{chapters-path}users/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}security/_index.adoc[leveloffset=+1]
 
@@ -107,6 +109,8 @@ include::{chapters-path}disks/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}geom/_index.adoc[leveloffset=+1]
 
+include::{chapters-path}zfs/_index.adoc[leveloffset=+1]
+
 include::{chapters-path}filesystems/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}virtualization/_index.adoc[leveloffset=+1]
@@ -116,6 +120,8 @@ include::{chapters-path}l10n/_index.adoc[leveloffset=+1]
 include::{chapters-path}cutting-edge/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}dtrace/_index.adoc[leveloffset=+1]
+
+include::{chapters-path}usb-device-mode/_index.adoc[leveloffset=+1]
 
 // Section four
 include::{chapters-path}partiv.adoc[]
@@ -144,5 +150,9 @@ include::{chapters-path}bibliography/_index.adoc[leveloffset=+1]
 include::{chapters-path}eresources/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}pgpkeys/_index.adoc[leveloffset=+1]
+
+include::{chapters-path}glossary.adoc[leveloffset=+1]
+
+include::{chapters-path}colophon.adoc[leveloffset=+1]
 
 :sectnums:
