--- a/documentation/content/nl/books/handbook/partiv.adoc
+++ b/documentation/content/nl/books/handbook/partiv.adoc
@@ -1,23 +1,23 @@
 ---
-title: Deel IV. Netwerkcommunicatie
-prev: books/handbook/usb-device-mode
 next: books/handbook/serialcomms
-showBookMenu: true
-weight: 30
 params:
-  path: "/books/handbook/partiv/"
+  path: /books/handbook/partiv/
+prev: books/handbook/usb-device-mode
+showBookMenu: 'true'
+title: 'Deel IV. Netwerkcommunicatie'
+weight: 33
 ---
 
 [[network-communication]]
 = Netwerkcommunicatie
 
-Als het om servers gaat die hoge prestaties moeten leveren, wordt wereldwijd vaak FreeBSD toegepast. De hoofdstukken in dit deel behandelen:
+FreeBSD is een van de meest gebruikte besturingssystemen voor hoogwaardige, snelle netwerkservers. De hoofdstukken in dit deel behandelen:
 
-* Seriëe communicatie;
-* PPP en PPP over Ethernet;
-* E-mail;
-* Netwerkdiensten;
-* Firewalls;
-* Overig gevorderd netwerken.
+* Seriële communicatie
+* PPP en PPP over Ethernet
+* E-mail
+* Netwerkdiensten
+* Firewalls
+* Andere geavanceerde netwerkonderwerpen
 
-Deze hoofdstukken zijn geschreven om gelezen te worden als de informatie nodig is. Ze hoeven niet allemaal in een bepaalde volgorde gelezen te worden. Ze hoeven ook niet allemaal gelezen te worden om FreeBSD in een netwerkomgeving in te zetten.
+Deze hoofdstukken kunnen worden gelezen als naslagwerk. Ze kunnen in willekeurige volgorde worden gelezen en niet alle hoofdstukken hoeven gelezen te worden om FreeBSD te kunnen gaan gebruiken in een netwerkomgeving.
