--- a/documentation/content/nl/books/handbook/partv.adoc
+++ b/documentation/content/nl/books/handbook/partv.adoc
@@ -1,12 +1,12 @@
 ---
-title: Deel V. Appendix
-prev: books/handbook/advanced-networking
 next: books/handbook/mirrors
-showBookMenu: true
-weight: 37
 params:
-  path: "/books/handbook/partv/"
+  path: /books/handbook/partv/
+prev: books/handbook/advanced-networking
+showBookMenu: 'true'
+title: 'Deel V. Bijlagen'
+weight: 40
 ---
 
 [[appendices]]
-= Appendix
+= Bijlagen 
