--- a/website/content/en/status/report-2025-04-2025-06/cfc.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/cfc.adoc
@@ -23,7 +23,8 @@ It is noteworthy that all prior FreeBSD documentation has been fully translated 
 In addition, two classic works have been translated.
 
 * _A Quarter Century of Unix_
-* _The UNIX-HATERS Handbook_
+* _The UNIX-HATERS Handbook_, an humoristic book written in 1994 about issues that some users found in the UNIX operating system.
+  It includes an anti-foreword from Dennis Ritchie, one of the authors of UNIX, which he wrote in a style similar to the one used in the handbook itself.
 
 
 ==== FreeBSD-Ask
