--- a/website/content/en/status/report-2025-04-2025-06/cfc.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/cfc.adoc
@@ -71,6 +71,7 @@ link:https://github.com/FreeBSD-Ask/QQ-Port/[QQ Port on GitHub] URL: link:https:
 link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=287292[Bug 287292 - [NEW PORT\] net-im/qq: consider restoring QQ port due to resumed upstream development]
 URL: https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=287292[]
 
-In the current quarter, a port was created for QQ, one of the most popular instant messaging applications currently in use in mainland China. The port remains open and has not yet been assigned any reviewers.
+In the current quarter, a port was created for QQ, one of the most popular instant messaging applications currently in use in mainland China.
+The bug report remains open and has not yet been assigned any reviewers.
 
 Sponsors: Chinese FreeBSD Community (CFC)
