--- a/website/content/en/status/report-2025-04-2025-06/cfc.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/cfc.adoc
@@ -57,7 +57,7 @@ Quarterly Updates
   ** Wubi Input Method(Based on package:textproc/fcitx5[] or package:textproc/ibus[])
   ** Installing package:x11-wm/xfce4[]
 
-* chore:
+* Miscellaneous:
   ** The tutorials pertaining to DragonFly BSD, OpenBSD and NetBSD have undergone comprehensive translation, updating and rewriting.
   ** Several GitHub Actions have been added to verify that images are referenced correctly.
   ** We now support exporting _FreeBSD-Ask_ to the EPUB format.
