--- a/website/content/en/status/report-2025-04-2025-06/cfc.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/cfc.adoc
@@ -61,7 +61,7 @@ Quarterly Updates
   ** The tutorials pertaining to DragonFly BSD, OpenBSD and NetBSD have undergone comprehensive translation, updating and rewriting.
   ** Several GitHub Actions have been added to verify that images are referenced correctly.
   ** We now support exporting _FreeBSD-Ask_ to the EPUB format.
-  ** The package:security/py-fail2ban[] port (utilizing IPFW, PF, and IPF) has been submitted to the FreeBSD Journal for review.
+  ** A tutorial about the package:security/py-fail2ban[] port (utilizing man:ipfw[4], man:pf[4], and man:ipf[4]) has been submitted to the FreeBSD Journal for review.
 
 It is hoped that an increasing number of contributors will join the documentation efforts. The primary objective of this project is to undertake a comprehensive modernisation and rewrite of the FreeBSD Handbook with a view to promoting the development and adoption of FreeBSD.
 
