--- a/website/content/en/status/report-2025-04-2025-06/cfc.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/cfc.adoc
@@ -47,7 +47,7 @@ Quarterly Updates
   ** FreeBSD as a Host with VirtualBox
 
 * Rewritten Documentation:
-  ** games on FreeBSD (Renpy and Minecraft)
+  ** Games on FreeBSD (Renpy and Minecraft)
   ** Installing package:sysutils/podman-suite[]
   ** Installing package:x11/gnome[](to 47)
   ** Installing package:net/rsync[] 
