Status/2025Q2/qemu_l4b.adoc: typo fix

--- a/website/content/en/status/report-2025-04-2025-06/qemu_l4b.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/qemu_l4b.adoc
@@ -28,7 +28,7 @@ Current Status:
   ** linux/arm64/v8
 * Pre-build Docker container with FreeBSD 14.1 binary world is created and pushed to the GitHub Container Registry.
   ** link:https://ghcr.io/sobomax/qemu-bsd-user-l4b:latest-ubuntu-latest-freebsd141[FreeBSD Image @ GHCR]
-* Special pre-built "admin" container with Linux user-mode quemu binary for the FreeBSD/amd64 emulation is also published at the GHCR.
+* Special pre-built "admin" container with Linux user-mode qemu binary for the FreeBSD/amd64 emulation is also published at the GHCR.
   ** link:https://ghcr.io/sobomax/qemu-bsd-user-l4b:latest-ubuntu-latest[FreeBSD binfmt Image @ GHCR]
 
 Next Steps:
