Status/2025Q2/qemu_l4b.adoc: Fixes

--- a/website/content/en/status/report-2025-04-2025-06/qemu_l4b.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/qemu_l4b.adoc
@@ -15,7 +15,7 @@ News:
 * Two new pull requests have been received since the initial project announcement:
   ** Diagnostic output cleanup;
   ** kqueue() support using libkqueue library on Linux.
-* Latest set of changes has been pulled from the Warner's qemu-bsd-user project bringing Qemu version to 9.2.0 along with some fixes and improvements.
+* The latest set of changes has been pulled from the Warner's qemu-bsd-user project bringing Qemu version to 9.2.0 along with some fixes and improvements.
 
 Current Status:
 
@@ -26,7 +26,7 @@ Current Status:
   ** linux/amd64
   ** linux/arm/v5
   ** linux/arm64/v8
-* Pre-build Docker container with FreeBSD 14.1 binary world is created and pushed to the GitHub Container Registry.
+* A pre-built Docker container with FreeBSD 14.1 binary world is created and pushed to the GitHub Container Registry.
   ** link:https://ghcr.io/sobomax/qemu-bsd-user-l4b:latest-ubuntu-latest-freebsd141[FreeBSD Image @ GHCR]
 * Special pre-built "admin" container with Linux user-mode qemu binary for the FreeBSD/amd64 emulation is also published at the GHCR.
   ** link:https://ghcr.io/sobomax/qemu-bsd-user-l4b:latest-ubuntu-latest[FreeBSD binfmt Image @ GHCR]
