HW Relnotes: Consolidate remaining Serial Interfaces
Adjust the note in USB Devices accordingly.

Reviewed by:		delphij
Differential Revision:	https://reviews.freebsd.org/D50593

--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -634,9 +634,27 @@ Marvell 88W8363 IEEE 802.11n wireless network adapters (man:mwl[4] driver)
 
 &hwlist.uark;
 
+&hwlist.ubsa;
+
+&hwlist.ubser;
+
 &hwlist.uchcom;
 
 &hwlist.ucycom;
+
+&hwlist.uftdi;
+
+&hwlist.umcs;
+
+&hwlist.umct;
+
+&hwlist.umoscom;
+
+&hwlist.uplcom;
+
+&hwlist.uslcom;
+
+&hwlist.uvscom;
 
 [[sound]]
 === Sound Devices
@@ -714,17 +732,13 @@ Owing to the generic nature of most USB devices, with some exceptions any device
 
 [NOTE]
 ====
-USB network interfaces can be found in <<ethernet,Ethernet Interfaces>> or <<wlan,Wireless Network Interfaces>>.
-====
-
-[NOTE]
-====
 USB Bluetooth adapters can be found in <<bluetooth,Bluetooth>>.
-====
 
-[NOTE]
-====
 USB human interface devices can be found in <<misc,Miscellaneous>>.
+
+USB network interfaces can be found in <<ethernet,Ethernet Interfaces>> or <<wlan,Wireless Network Interfaces>>.
+
+USB serial interfaces can be found in <<serial,Serial Interfaces>>.
 ====
 
 Altera University Program Secure Data Card IP Core (man:altera_sdcard[4] driver)
@@ -767,25 +781,11 @@ Altera University Program Secure Data Card IP Core (man:altera_sdcard[4] driver)
 
 &hwlist.ulpt;
 
-&hwlist.ubsa;
-
-&hwlist.ubser;
-
-&hwlist.uftdi;
-
-&hwlist.uplcom;
-
-&hwlist.umcs;
-
 &hwlist.umct;
 
 [amd64, i386] Audio Devices (man:uaudio[4] driver)
 
-&hwlist.uslcom;
-
 &hwlist.uvisor;
-
-&hwlist.uvscom;
 
 &hwlist.xhci;
 
